[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fcg_extractor"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A package for extracting opcodes from executable files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "r2pipe",
    "pandas",
    "tqdm",
    "pyelftools",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fcg-extractor"
"Bug Tracker" = "https://github.com/yourusername/fcg-extractor/issues"

[tool.hatch.build.targets.wheel]
packages = ["fcg_extractor"]